--- a/public_html/new/css/additional_design.css
+++ b/public_html/new/css/additional_design.css
@@ -109,20 +109,20 @@
 
 /* FEATURES */
 
-.features_phone_side{
-    display: none;
-}
+
 
 .features_phone_side{
     position: relative;
     display: block;
     width: 90%;
     margin: 0 auto;
+    max-width: 400px;
     margin-top: 30px
 }
 
 .features_phone_side img{
     width: 100%;
+
 }
 
 #features{
@@ -130,7 +130,7 @@
 }
 
 
-@media(min-width:785px) {
+@media(min-width:847px) {
     #features{
         padding-left: 0px
     }
@@ -139,7 +139,7 @@
         display: block;
         width: 300px;
         float: right;
-        margin-left: 370px;
+        margin-left: 400px;
         margin-top: -150px;
     }
 
@@ -147,4 +147,108 @@
         width: 300px;
     }
 
+}
+
+
+/* NEW SCHEDULE FORMAT */
+
+@media(max-width:846px) {
+    #schedule{
+        padding-left: 0px;
+        padding-bottom: 340px;
+    }
+
+    #schedule .text{
+
+    }
+
+    .schedule_screens{
+        position: absolute;
+        display: block;
+        margin-left: 0;
+        margin-top: 0px;
+        width: 90%;
+        max-width: 400px;
+        left: 50%;
+        margin-left: -255px;
+    }
+
+    .schedule_screens img{
+        position: absolute;
+        display: block;
+        width: 100%;
+    }
+
+    .schedule_screens .phone1{
+
+    }
+
+    .schedule_screens .phone2{
+        margin-left: 100px;
+    }
+
+}
+@media(min-width:847px) {
+    #schedule{
+        padding-left: 0px;
+        padding-bottom: 240px;
+    }
+    #schedule .text{
+        text-align: left; width: 100%; max-width: 400px;margin: 0 auto; margin-left: 300px; margin-top: 100px;
+    }
+    .schedule_screens{
+        position: absolute;
+        display: block;
+        width: 300px;
+        float: right;
+        margin-left: -120px;
+        margin-top: -220px;
+    }
+
+    .schedule_screens img{
+        width: 400px;
+        position: absolute;
+        display: block;
+    }
+
+    .schedule_screens .phone1{
+
+    }
+
+    .schedule_screens .phone2{
+        margin-left: 100px;
+    }
+}
+
+
+/* STORE BUTTONS BOTTOM */
+
+
+
+    .store_buttons_bottom{
+        position: relative;
+        left: 50%;
+        margin-left: -50%;
+        width: 100%;
+
+    }
+
+    .store_buttons_bottom img{
+        width: 200px;
+        display: inline-block;
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+
+    .store_buttons_bottom a:hover{
+        text-decoration: none;
+    }
+
+
+/* COMMENTS */
+.vk_comments{
+    position: relative;
+    width: 600px;
+    left: 50%;
+    margin-left: -300px;
 }
