--- a/public_html/css/additional_design.css
+++ b/public_html/css/additional_design.css
@@ -1,3 +1,9 @@
+img.playstore, img.appstore{
+    cursor: pointer;
+}
+
+
+
 .top_presentation {
     display: none;
 }
@@ -25,6 +31,12 @@
 
 #about{
     padding-top: 300px;
+}
+
+.store_buttons a{
+    cursor: pointer!important;
+    transition: none!important;
+    text-decoration: none;
 }
 
 .store_buttons{
@@ -162,15 +174,19 @@
 
     }
 
+    #services{
+        padding-top: 80px!important;
+    }
+
     .schedule_screens{
         position: absolute;
         display: block;
         margin-left: 0;
         margin-top: 0px;
         width: 90%;
-        max-width: 400px;
+        max-width: 200px;
         left: 50%;
-        margin-left: -255px;
+        margin-left: -150px;
     }
 
     .schedule_screens img{
@@ -196,17 +212,22 @@
     #schedule .text{
         text-align: left; width: 100%; max-width: 400px;margin: 0 auto; margin-left: 300px; margin-top: 100px;
     }
+
+    #services{
+        padding-top: 10px!important;
+    }
+
     .schedule_screens{
         position: absolute;
         display: block;
         width: 300px;
         float: right;
-        margin-left: -120px;
-        margin-top: -220px;
+        margin-left: -40px;
+        margin-top: -200px;
     }
 
     .schedule_screens img{
-        width: 400px;
+        width: 200px;
         position: absolute;
         display: block;
     }
@@ -233,16 +254,22 @@
 
     }
 
+
+    .store_buttons_bottom a{
+
+        cursor: pointer!important;
+        transition: none!important;
+        text-decoration: none;
+    }
     .store_buttons_bottom img{
         width: 200px;
         display: inline-block;
         margin-top: 10px;
         margin-left: 10px;
+
     }
 
-    .store_buttons_bottom a:hover{
-        text-decoration: none;
-    }
+
 
 
 /* COMMENTS */
