--- a/public_html/css/additional_design.css
+++ b/public_html/css/additional_design.css
@@ -1,3 +1,85 @@
+@media(max-width:1199px) {
+  #version_history{
+    display: none;
+  }
+}
+
+@media(min-width:920px) {
+  #version_history{
+    display: block;
+    right: 35px;
+    top: 870px;
+  }
+}
+
+@media(min-width:1200px) {
+  #version_history{
+    display: block;
+    right: 35px;
+    top: 200px;
+  }
+}
+
+
+
+
+
+
+#version_history{
+  position: absolute;
+  overflow: hidden;
+  color: #404040;
+  width: 250px;
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+}
+
+  .vh_title{
+    font-weight: 600;
+    font-size: 18px;
+    background: #f05f40;
+    color: white;
+    padding: 10px;
+  }
+
+  .vh_versions{
+    font-size: 11px;
+    padding: 5px;
+    padding-left: 10px;
+    overflow-y: scroll;
+    height: 180px;
+    -webkit-mask-image: -webkit-gradient(linear, left 90%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+  }
+
+  .vh_ver{
+    margin-bottom: 5px;
+  }
+
+  .vh_ver_title{
+    position: relative;
+    text-align: left;
+    font-weight: bold;
+  }
+
+  .vh_ver_title .date{
+    position: absolute;
+    right: 10px;
+    font-size: 12px;
+    font-weight: normal;
+    opacity: .8;
+
+  }
+
+  .vh_ver_desc{
+    text-align: left;
+    padding-left: 5px;
+    opacity: .8;
+  }
+
+
+
+
 img.playstore, img.appstore{
     cursor: pointer;
 }
@@ -244,8 +326,6 @@ img.playstore, img.appstore{
 
 /* STORE BUTTONS BOTTOM */
 
-
-
     .store_buttons_bottom{
         position: relative;
         left: 50%;
@@ -273,10 +353,10 @@ img.playstore, img.appstore{
 
 
 /* COMMENTS */
-.vk_comments{
-  position: relative;
-  padding-top: 30px;
+.vk_comments iframe{
+  width: 100% !important;
+  /*padding-top: 30px;
   width: 500px;
   left: 50%;
-  margin-left: -250px;
+  margin-left: -250px;*/
 }
